--- a/Cours Jquerry/exJQuery.html
+++ b/Cours Jquerry/exJQuery.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemple Jquery</title>
 </head>
 <body>
+    <h1>Bienvenue sur JQuerry</h1>
+    <h2>Je suis la 1er balise H2</h2>
+    <h2 id="deux">Je suis la 2nd balise H2</h2>
+    <h2 class="trois">Je suis la 3éme balise H2</h2>
+    <p class="trois">Je suis le 1er paragraphe</p>
+    <ul>
+        <li>Je suis la 1er li</li>
+        <li>Je suis la 2nd li</li>
+        <li>Je suis la 3éme li</li>
+    </ul>
+    <!-- jquery local -->
+    <script src="./jquery-3.7.1.min.js"></script>
+    <!-- jsquery cdn -->
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
     <script src="../asset/Js/script.js"></script>
-    <h1>JQuerry</h1>
 
 </body>
 </html>
