--- a/Cours Jquerry/exJQuery.html
+++ b/Cours Jquerry/exJQuery.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Bienvenue sur JQuerry</h1>
-    <h2>Je suis la 1er balise H2</h2>
+    <h2 id="un">Je suis la 1er balise H2</h2>
     <h2 id="deux">Je suis la 2nd balise H2</h2>
     <h2 class="trois">Je suis la 3éme balise H2</h2>
     <p class="trois">Je suis le 1er paragraphe</p>
