--- a/Cours Jquerry/exJQuery.html
+++ b/Cours Jquerry/exJQuery.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../asset/css/stylejquery.css">
     <title>Exemple Jquery</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
         <li>Je suis la 2nd li</li>
         <li>Je suis la 3éme li</li>
     </ul>
+    <section id="align"></section>
     <!-- jquery local -->
     <script src="./jquery-3.7.1.min.js"></script>
     <!-- jsquery cdn -->
