--- a/Cours Jquerry/exJQuery.html
+++ b/Cours Jquerry/exJQuery.html
@@ -18,6 +18,7 @@
         <li>Je suis la 3éme li</li>
     </ul>
     <section id="align"></section>
+    <img src="../asset/image/accueil.webp" alt="">
     <!-- jquery local -->
     <script src="./jquery-3.7.1.min.js"></script>
     <!-- jsquery cdn -->
