--- a/Cours Jquerry/exJQuery.html
+++ b/Cours Jquerry/exJQuery.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Bienvenue sur JQuerry</h1>
+    <div class="form"></div>
+    <button id="anim">Animer</button>
+    <button id="app">Apparaitre</button>
+    <button id="dis">Disparaitre</button>
     <h2 id="un">Je suis la 1er balise H2</h2>
     <h2 id="deux">Je suis la 2nd balise H2</h2>
     <h2 class="trois">Je suis la 3éme balise H2</h2>
@@ -18,9 +22,27 @@
         <li>Je suis la 3éme li</li>
     </ul>
     <section id="align"></section>
-    <img src="../asset/image/accueil.webp" alt="">
+    <div class="test">
+        <img src="../asset/image/accueil.webp" alt="" id="img1">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos voluptatem explicabo optio accusantium tenetur ad rerum quibusdam, repellat autem unde rem aliquam sint ea officia quis aliquid sed natus quae ipsam ab eius similique. Facilis commodi est eveniet sequi deserunt, voluptatum adipisci explicabo dignissimos? Nisi aliquam incidunt cum eos. Incidunt mollitia officia minus sunt deserunt, perspiciatis, tenetur totam optio velit itaque ut obcaecati, quaerat placeat assumenda. Dicta aut natus voluptates rem placeat ipsum minus vel, tenetur delectus animi, doloremque nihil sit, obcaecati ipsa ea quas tempora ducimus magni. Ut cumque ipsam nemo reprehenderit, rerum praesentium repudiandae voluptas unde optio temporibus voluptate eaque nostrum quae magnam cupiditate. Aperiam, est molestiae nulla eveniet dolorum reiciendis minus maxime cumque quidem consequatur laudantium asperiores sapiente vitae delectus dolore, quibusdam possimus omnis animi obcaecati. Nam ex debitis nobis dolorum, natus alias voluptas, vero officiis vitae laboriosam quidem? Quia nulla fugit ipsa ratione. Porro sed delectus recusandae maiores itaque adipisci sequi ullam, quod beatae ducimus, nihil nisi consequatur veniam voluptas! Dolore placeat nulla reiciendis nemo et dignissimos quod magnam adipisci. Aut beatae temporibus debitis sequi error illum numquam soluta quisquam aspernatur esse deleniti, earum magni quod saepe perferendis exercitationem dolore libero, dolores qui eum, delectus itaque.
+        </p>
+    </div>
+    <section id="sect4">
+        <button id="ajout">Ajouter</button>
+    </section>
+    <br><br><br><br>
+    <div class="container">
+        <div id="slider">
+            <img src="../asset/image/dragon or.webp" alt="">
+            <img src="../asset/image/dragon b.jfif" alt="">
+            <img src="../asset/image/dragon v.jfif" alt="">
+            <img src="../asset/image/dragon.jfif" alt="">
+            <img src="../asset/image/dice-game-role-playing-game.jpg" alt="">
+        </div>
+    </div>
+
     <!-- jquery local -->
-    <script src="./jquery-3.7.1.min.js"></script>
+    <script src="../asset/Js/jquery-3.7.1.min.js"></script>
     <!-- jsquery cdn -->
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
