--- a/1er_site_JS/index.html
+++ b/1er_site_JS/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../asset/css/style2.css">
+    <title>Accueil de notre 1er site avec JS</title>
 </head>
 <body>
-    
+    <header>
+        <div id="logo">
+            <a href="./index.html"><img src="../asset/image/oiseau.webp" alt="logo du site"></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="">Accueil</a></li>
+                <li><a href="">A propos</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="baniere">
+            <div id="slider">
+                <img src="../asset/image/dragon o.jfif" alt="">
+                <img src="../asset/image/dragon b.jfif" alt="">
+                <img src="../asset/image/dragon v.jfif" alt="">
+                <img src="../asset/image/dragon or.webp" alt="">
+            </div>
+            <div class="text">
+                <h1>Accueil de notre site</h1>
+                <a href="./Contact.html">Contactez-nous</a>
+            </div>
+        </section>
+    </main>
+    <script src="../asset/Js/jquery-3.7.1.min.js"></script>
+    <script src="../asset/Js/script_site.js"></script>
 </body>
 </html>
