--- a/1er_site_JS/index.html
+++ b/1er_site_JS/index.html
@@ -24,14 +24,16 @@
     <main>
         <section class="baniere">
             <div id="slider">
-                <img src="../asset/image/dragon o.jfif" alt="">
-                <img src="../asset/image/dragon b.jfif" alt="">
-                <img src="../asset/image/dragon v.jfif" alt="">
-                <img src="../asset/image/dragon or.webp" alt="">
+                <span id="sgauche">&lt;</span>
+                <img src="../asset/image/45c87a64e1f4b8d505bd92e2089c06ee.jpg" alt="">
+                <img src="../asset/image/951611bfa0ea57549872ba741b49dc86.jpg" alt="">
+                <img src="../asset/image/article-kit-initiation-cthulhu-1024x373.jpg" alt="">
+                <img src="../asset/image/jedigris.jpg" alt="">
+                <span id="sdroite">&gt;</span>
             </div>
             <div class="text">
                 <h1>Accueil de notre site</h1>
-                <a href="./Contact.html">Contactez-nous</a>
+                <a href="./Contact.html" class="btn">Contactez-nous</a>
             </div>
         </section>
     </main>
