--- a/1er_site_JS/index.html
+++ b/1er_site_JS/index.html
@@ -10,6 +10,7 @@
     <header>
         <div id="logo">
             <a href="./index.html"><img src="../asset/image/oiseau.webp" alt="logo du site"></a>
+            <p>Nom du site</p>
         </div>
         <nav>
             <ul>
@@ -20,6 +21,9 @@
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
+        <div class="burger">
+            <span></span>
+        </div>
     </header>
     <main>
         <section class="baniere">
@@ -37,6 +41,33 @@
             </div>
         </section>
     </main>
+    <footer>
+        <table>
+            <tr>
+                <td>
+                    <h3>Plan du site</h3>
+                        <ul>
+                            <li><a href="">Accueil</a></li>
+                            <li><a href="">A propos</a></li>
+                            <li><a href="">Services</a></li>
+                            <li><a href="">Blog</a></li>
+                            <li><a href="">Contact</a></li>
+                        </ul>
+                </td>
+                <td>
+                    <h3>RGPD</h3>
+                        <ul>
+                            <li><a href="">Mention légale</a></li>
+                            <li><a href="">Politique de confidetialité</a></li>
+                            <li><a href="">CGU</a></li>
+                            <li><a href="">Politique des cookies</a></li>
+                            <li><a href="">Accessibilité</a></li>
+                        </ul>
+                </td>
+            </tr>
+        </table>
+        <p>&#169; DWWM SJT 2025. Tous droits réservés.</p>
+    </footer>
     <script src="../asset/Js/jquery-3.7.1.min.js"></script>
     <script src="../asset/Js/script_site.js"></script>
 </body>
