--- a/1er_site_JS/blog.html
+++ b/1er_site_JS/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../asset/css/style2.css">
-    <title>Contact de notre 1er site avec JS</title>
+    <title>Blog de notre 1er site avec JS</title>
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
         <section class="baniere">
                 <img src="../asset/image/45c87a64e1f4b8d505bd92e2089c06ee.jpg" alt="">
             <div class="text">
-                <h1>Contact</h1>
+                <h1>Blog</h1>
                 <a href="./Contact.html" class="btn">Contactez-nous</a>
             </div>
         </section>
