--- a/1er_site_JS/index.html
+++ b/1er_site_JS/index.html
@@ -14,11 +14,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="">Accueil</a></li>
-                <li><a href="">A propos</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="./index.html">Accueil</a></li>
+                <li><a href="./apropos.html">A propos</a></li>
+                <li><a href="./services.html">Services</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./Contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="burger">
@@ -40,6 +40,129 @@
                 <a href="./Contact.html" class="btn">Contactez-nous</a>
             </div>
         </section>
+        <div class="decal"></div>
+        <h2>Qui sommes nous ?</h2>
+        <section class="apropos">
+            <aside class="image">
+                <img src="../asset/image/logotrap.jfif" alt="">
+            </aside>
+            <aside class="texte">
+                <h3>Notre histoire</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque labore quibusdam sequi sit fugiat! Deleniti tempora, quod porro tempore esse incidunt explicabo similique nulla necessitatibus! Quasi praesentium debitis alias itaque officiis dolore dicta esse distinctio, aut libero doloremque cupiditate, deleniti, dolor suscipit eaque quia numquam corporis voluptate perspiciatis. Non odit magnam delectus aliquid placeat quibusdam rem animi ullam corrupti? Totam, veritatis quas sapiente, provident et error laudantium iusto obcaecati, repellat necessitatibus ex illum laborum pariatur iste soluta! Numquam, laboriosam distinctio eos quod odio molestias voluptatem et fuga possimus, totam repudiandae est sed quaerat ullam officia facilis debitis tenetur impedit tempore?
+                </p><br><br>
+                <a href="./apropos.html" class="btn">En savoir +</a>
+            </aside>
+        </section>
+        <h2>Nos services</h2>
+        <section class="services">
+            <aside class="service">
+                <img src="../asset/image/OIP (9).jfif" alt="">
+                <h3>Service 1</h3>
+                <a href="" class="btn">En savoir plus</a>
+                <div class="popup">
+                    <span class="close">x</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus perferendis, dolore quo maxime neque iusto atque quidem sunt velit vero tempore vel consectetur exercitationem, illum natus at ad labore est unde impedit deleniti molestias quos repudiandae. Doloremque minima molestiae nam, quo illo et nisi ratione! Nobis, libero voluptatum. Aperiam, animi?</p>
+                </div>
+            </aside>
+            <aside class="service">
+                <img src="../asset/image/Sroczka.jpg" alt="">
+                <h3>Service 2</h3>
+                <a href="" class="btn">En savoir plus</a>
+                <div class="popup">
+                    <span class="close">x</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus perferendis, dolore quo maxime neque iusto atque quidem sunt velit vero tempore vel consectetur exercitationem, illum natus at ad labore est unde impedit deleniti molestias quos repudiandae. Doloremque minima molestiae nam, quo illo et nisi ratione! Nobis, libero voluptatum. Aperiam, animi?</p>
+                </div>
+            </aside>
+            <aside class="service">
+                <img src="../asset/image/bootstrap.jpg" alt="">
+                <h3>Service 3</h3>
+                <a href="" class="btn">En savoir plus</a>
+                <div class="popup">
+                    <span class="close">x</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus perferendis, dolore quo maxime neque iusto atque quidem sunt velit vero tempore vel consectetur exercitationem, illum natus at ad labore est unde impedit deleniti molestias quos repudiandae. Doloremque minima molestiae nam, quo illo et nisi ratione! Nobis, libero voluptatum. Aperiam, animi?</p>
+                </div>
+            </aside>
+        </section>
+        <h2>Nos derniers articles</h2>
+        <section class="blog">
+            <article class="article">
+                <img src="../asset/image/sith.jfif" alt="">
+                <h3>Article 1</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corporis nobis provident unde adipisci, delectus sequi labore exercitationem mollitia. Accusamus, quaerat! Dicta architecto numquam temporibus, veritatis esse minima dolor modi, illo eveniet aliquam doloribus alias? Nihil nemo tempore libero voluptates magnam, delectus et. Ullam id ducimus adipisci voluptatibus ratione molestias, minima ipsum dolore amet cupiditate magnam natus illo inventore sit, quidem magni corporis eum voluptates deserunt? Non, alias sint? Corporis deserunt iusto delectus porro quia debitis eum maxime, eligendi quo doloremque architecto deleniti laborum cupiditate aut molestiae quod error placeat numquam aspernatur. Laudantium commodi quos ducimus ipsum cumque porro quia laboriosam, doloribus et nisi maxime? Aliquam doloremque molestiae dignissimos adipisci! Distinctio dignissimos dicta voluptate laudantium, nulla mollitia eveniet officia quas ad dolore necessitatibus tempore cupiditate dolores soluta illum animi ducimus consectetur quia ipsum delectus. Voluptate facilis sequi vitae laborum iure consequuntur, sunt amet nostrum laudantium veniam dolores, fugit repellendus nemo magnam commodi perspiciatis temporibus ab molestiae in architecto quibusdam aliquam, iusto nam impedit? Accusamus et reiciendis commodi cupiditate voluptatem dolores! Optio error quae asperiores deserunt esse sint quasi, qui saepe expedita doloremque, omnis aspernatur quas laudantium earum dignissimos. At harum ullam architecto nisi provident, sapiente neque fugit ipsam enim cupiditate?
+                </p>
+                <br><br>
+                <a href="./blog.html" class="btn">Lire +</a>
+            </article>
+            <article class="article">
+                <img src="../asset/image/jedigris.jpg" alt="">
+                <h3>Article 2</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corporis nobis provident unde adipisci, delectus sequi labore exercitationem mollitia. Accusamus, quaerat! Dicta architecto numquam temporibus, veritatis esse minima dolor modi, illo eveniet aliquam doloribus alias? Nihil nemo tempore libero voluptates magnam, delectus et. Ullam id ducimus adipisci voluptatibus ratione molestias, minima ipsum dolore amet cupiditate magnam natus illo inventore sit, quidem magni corporis eum voluptates deserunt? Non, alias sint? Corporis deserunt iusto delectus porro quia debitis eum maxime, eligendi quo doloremque architecto deleniti laborum cupiditate aut molestiae quod error placeat numquam aspernatur. Laudantium commodi quos ducimus ipsum cumque porro quia laboriosam, doloribus et nisi maxime? Aliquam doloremque molestiae dignissimos adipisci! Distinctio dignissimos dicta voluptate laudantium, nulla mollitia eveniet officia quas ad dolore necessitatibus tempore cupiditate dolores soluta illum animi ducimus consectetur quia ipsum delectus. Voluptate facilis sequi vitae laborum iure consequuntur, sunt amet nostrum laudantium veniam dolores, fugit repellendus nemo magnam commodi perspiciatis temporibus ab molestiae in architecto quibusdam aliquam, iusto nam impedit? Accusamus et reiciendis commodi cupiditate voluptatem dolores! Optio error quae asperiores deserunt esse sint quasi, qui saepe expedita doloremque, omnis aspernatur quas laudantium earum dignissimos. At harum ullam architecto nisi provident, sapiente neque fugit ipsam enim cupiditate?
+                </p>
+                <br><br>
+                <a href="./blog.html" class="btn">Lire +</a>
+            </article>
+            <article class="article">
+                <img src="../asset/image/jedi.jfif" alt="">
+                <h3>Article 3</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corporis nobis provident unde adipisci, delectus sequi labore exercitationem mollitia. Accusamus, quaerat! Dicta architecto numquam temporibus, veritatis esse minima dolor modi, illo eveniet aliquam doloribus alias? Nihil nemo tempore libero voluptates magnam, delectus et. Ullam id ducimus adipisci voluptatibus ratione molestias, minima ipsum dolore amet cupiditate magnam natus illo inventore sit, quidem magni corporis eum voluptates deserunt? Non, alias sint? Corporis deserunt iusto delectus porro quia debitis eum maxime, eligendi quo doloremque architecto deleniti laborum cupiditate aut molestiae quod error placeat numquam aspernatur. Laudantium commodi quos ducimus ipsum cumque porro quia laboriosam, doloribus et nisi maxime? Aliquam doloremque molestiae dignissimos adipisci! Distinctio dignissimos dicta voluptate laudantium, nulla mollitia eveniet officia quas ad dolore necessitatibus tempore cupiditate dolores soluta illum animi ducimus consectetur quia ipsum delectus. Voluptate facilis sequi vitae laborum iure consequuntur, sunt amet nostrum laudantium veniam dolores, fugit repellendus nemo magnam commodi perspiciatis temporibus ab molestiae in architecto quibusdam aliquam, iusto nam impedit? Accusamus et reiciendis commodi cupiditate voluptatem dolores! Optio error quae asperiores deserunt esse sint quasi, qui saepe expedita doloremque, omnis aspernatur quas laudantium earum dignissimos. At harum ullam architecto nisi provident, sapiente neque fugit ipsam enim cupiditate?
+                </p>
+                <br><br>
+                <a href="./blog.html" class="btn">Lire +</a>
+            </article>
+        </section>
+        <h2>Contactez-nous</h2>
+        <section class="contact">
+            <aside><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10387.834829568777!2d2.4215552!3d49.3907731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1748867530481!5m2!1sfr!2sfr" ></iframe></aside>
+            <aside>
+                <table cellspacing="15">
+                    <form action="">
+                        <tr>
+                            <td><label for="prenom">Prenom <span>*</span></label></td>
+                            <td><label for="nom">Nom<span>*</span></label></td>
+                        </tr>
+                        <tr>
+                           <td> <input type="text" placeholder="John" required id="prenom"></td>
+                            <td><input type="text" placeholder="Doe" required id="nom"></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><label for="adresse">Adresse<span>*</span></label></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><input type="text" placeholder="67 rue du Charme" required id="adresse"></td>
+                        </tr>
+                        <tr>
+                            <td><label for="cp">Code Postal<span>*</span></label></td>
+                            <td><label for="ville">Ville<span>*</span></label></td>
+                        </tr>
+                        <tr>
+                            <td><input type="number" placeholder="75001" required id="cp"></td>
+                            <td><input type="text" placeholder="Paris" required id="ville"></td>
+                        </tr>
+                        <tr>
+                            <td><label for="tel">Téléphone<span>*</span></label></td>
+                            <td><label for="mail">Mail<span>*</span></label></td>
+                        </tr>
+                        <tr>
+                            <td><input type="number" placeholder="0664XXXX" required id="cp"></td>
+                            <td><input type="text" placeholder="John.d@hotmail.fr" required id="ville"></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><label for="message">Message</label></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><textarea name="" id="message"></textarea></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><input type="submit" value="Envoyer" class="btn" id="envoie"></td>
+                        </tr>
+                    </form>
+                </table>
+            </aside>
+        </section>
     </main>
     <footer>
         <table>
@@ -47,11 +170,11 @@
                 <td>
                     <h3>Plan du site</h3>
                         <ul>
-                            <li><a href="">Accueil</a></li>
-                            <li><a href="">A propos</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Blog</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="./index.html">Accueil</a></li>
+                            <li><a href="./apropos.html">A propos</a></li>
+                            <li><a href="./services.html">Services</a></li>
+                            <li><a href="./blog.html">Blog</a></li>
+                            <li><a href="./Contact.html">Contact</a></li>
                         </ul>
                 </td>
                 <td>
