--- a/1er_site_JS/index.html
+++ b/1er_site_JS/index.html
@@ -161,6 +161,9 @@
                         </tr>
                     </form>
                 </table>
+                <div class="reussite">
+                    <p>Votre message a bien été envoyé.</p>
+                </div>
             </aside>
         </section>
     </main>
