--- a/jeu de bulles/index.html
+++ b/jeu de bulles/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../asset/css/bulle.css">
+    <title>Jeux de bulle</title>
 </head>
 <body>
-    
+    <h1>Score <p>0</p><p><span>niveau 1</span></p></h1>
+    <script src="../asset/Js/bulle.js"></script>
+    <script src="../asset/Js/jquery-3.7.1.min.js"></script>
 </body>
 </html>
