--- a/page apy/inderx.html
+++ b/page apy/inderx.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../asset/css/apy.css">
-    <title>Club des animaux de compagnies</title>
+    <title>Club des chats</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="../asset/image/cat-head-kitten-symbol-gaming-cat-logo-elegant-element-for-brand-abstract-icon-symbols-vector.jpg" alt="logo">
+            <p>Club des chats</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="./inderx.html">Accueil</a></li>
+                <li><a href="#">A propos</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 
     <script src="../asset/Js/apy.js"></script>
     <script src="../asset/Js/jquery-3.7.1.min.js"></script>
 </body>
+
 </html>
