--- a/page apy/inderx.html
+++ b/page apy/inderx.html
@@ -15,17 +15,82 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./inderx.html">Accueil</a></li>
-                <li><a href="#">A propos</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#baniere">Accueil</a></li>
+                <li><a href="#qsn">A propos</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <section id="baniere">
+            <img src="../asset/image/chat2.jfif" alt="image de chat">
+            <div class="textban">
+                <h1>Bienvenue au club des chats.</h1>
+                <a href="#contact" class="btn">Contactez-nous</a>
+            </div>
+        </section>
+        <h2>Qui sommes nous ?</h2>
+        <section id="qsn">
+            <div class="image">
+                <img src="../asset/image/quelles-sont-les-races-de-chats-les-plus-intelligentes.jpg" alt="">
+            </div>
+            <div class="texte">
+                <h3>Histoire du club</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam velit, ut porro ipsum aperiam nemo doloribus hic quisquam aliquid, perferendis blanditiis totam neque voluptatum corrupti. Animi magnam, tempore, dolorem officiis nemo iste odit voluptas adipisci voluptatem, recusandae qui repellat optio? Dignissimos non blanditiis nostrum quam? Rem adipisci aperiam praesentium doloribus aut eligendi! Ducimus quia corporis, neque eos a minima nihil, eum molestias quidem quo ipsum quod rem ab suscipit non nisi nostrum maxime quisquam eligendi mollitia dignissimos ullam. Maxime impedit adipisci suscipit sapiente perspiciatis quia vel, tempora eveniet, ad delectus ex. Sequi deserunt quae explicabo exercitationem earum. Autem, ad inventore.
+                </p>
+            </div>
+        </section>
+        <h2>Nos services</h2>
+        <section id="services">
+            <aside class="service">
+                <img src="../asset/image/comprendre-le-langage-des-chats-768x576.jpg" alt="">
+                <h4>Service 1</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium, perferendis.</p>
+                <a href="#contact" class="btn">Contactez-nous</a>
+            </aside>
+            <aside class="service" id="s2">
+                <img src="../asset/image/R.jfif" alt="">
+                <h4>Service 2</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium, perferendis.</p>
+                <a href="#contact" class="btn">Contactez-nous</a>
+            </aside>
+            <aside class="service">
+                <img src="../asset/image/R (1).jfif" alt="">
+                <h4>Service 3</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium, perferendis.</p>
+                <a href="#contact" class="btn">Contactez-nous</a>
+            </aside>
+        </section>
+        <h2>Nos derniers articles</h2>
+        <section id="blog">
+            <article class="article">
+                <img src="../asset/image/chat2.jfif" alt="">
+                <h4>Article 1</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda laudantium dicta, dolores ex voluptatibus aliquid cupiditate a quam atque inventore vel facere quisquam delectus quibusdam debitis natus odit libero at quasi fugiat quidem placeat. Velit expedita magni culpa laudantium. Consequatur perferendis nam eaque autem, quos tempore aperiam perspiciatis labore minus error voluptatem, sed quidem! Dolorum nisi deleniti dicta tempora esse labore! Facilis, earum dignissimos quis atque reprehenderit minima ullam accusamus exercitationem architecto a ipsa, eligendi corporis obcaecati enim dolore suscipit ut maxime voluptate doloribus quas ea saepe molestiae. Distinctio praesentium exercitationem facilis quod. Dignissimos est harum ab id odio deleniti magni maiores. Ducimus nesciunt, repudiandae adipisci corporis rerum, inventore unde consequatur veritatis mollitia et perspiciatis ratione natus quam officiis illum tempora! Officiis nobis dolore excepturi blanditiis possimus ut voluptate nesciunt vel repellat. Totam accusantium laboriosam, maxime recusandae voluptate nesciunt doloribus quaerat odit perspiciatis dicta sed quos distinctio magni excepturi illo quasi id quidem? Accusamus possimus harum reprehenderit repellat alias odio similique eos dolor tenetur provident odit quia est illo neque vel, voluptate veritatis libero nam debitis quaerat deleniti assumenda voluptatem, omnis nisi? Cumque suscipit sed iusto voluptatem aperiam blanditiis sint nostrum inventore distinctio at, consectetur dolor cupiditate voluptatibus hic.</p>
+            </article>
+            <article class="article art2">
+                <img src="../asset/image/chat2.jfif" alt="">
+                <h4>Article 2</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda laudantium dicta, dolores ex voluptatibus aliquid cupiditate a quam atque inventore vel facere quisquam delectus quibusdam debitis natus odit libero at quasi fugiat quidem placeat. Velit expedita magni culpa laudantium. Consequatur perferendis nam eaque autem, quos tempore aperiam perspiciatis labore minus error voluptatem, sed quidem! Dolorum nisi deleniti dicta tempora esse labore! Facilis, earum dignissimos quis atque reprehenderit minima ullam accusamus exercitationem architecto a ipsa, eligendi corporis obcaecati enim dolore suscipit ut maxime voluptate doloribus quas ea saepe molestiae. Distinctio praesentium exercitationem facilis quod. Dignissimos est harum ab id odio deleniti magni maiores. Ducimus nesciunt, repudiandae adipisci corporis rerum, inventore unde consequatur veritatis mollitia et perspiciatis ratione natus quam officiis illum tempora! Officiis nobis dolore excepturi blanditiis possimus ut voluptate nesciunt vel repellat. Totam accusantium laboriosam, maxime recusandae voluptate nesciunt doloribus quaerat odit perspiciatis dicta sed quos distinctio magni excepturi illo quasi id quidem? Accusamus possimus harum reprehenderit repellat alias odio similique eos dolor tenetur provident odit quia est illo neque vel, voluptate veritatis libero nam debitis quaerat deleniti assumenda voluptatem, omnis nisi? Cumque suscipit sed iusto voluptatem aperiam blanditiis sint nostrum inventore distinctio at, consectetur dolor cupiditate voluptatibus hic.</p>
+            </article>
+            <article class="article art3">
+                <img src="../asset/image/chat2.jfif" alt="">
+                <h4>Article 3</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda laudantium dicta, dolores ex voluptatibus aliquid cupiditate a quam atque inventore vel facere quisquam delectus quibusdam debitis natus odit libero at quasi fugiat quidem placeat. Velit expedita magni culpa laudantium. Consequatur perferendis nam eaque autem, quos tempore aperiam perspiciatis labore minus error voluptatem, sed quidem! Dolorum nisi deleniti dicta tempora esse labore! Facilis, earum dignissimos quis atque reprehenderit minima ullam accusamus exercitationem architecto a ipsa, eligendi corporis obcaecati enim dolore suscipit ut maxime voluptate doloribus quas ea saepe molestiae. Distinctio praesentium exercitationem facilis quod. Dignissimos est harum ab id odio deleniti magni maiores. Ducimus nesciunt, repudiandae adipisci corporis rerum, inventore unde consequatur veritatis mollitia et perspiciatis ratione natus quam officiis illum tempora! Officiis nobis dolore excepturi blanditiis possimus ut voluptate nesciunt vel repellat. Totam accusantium laboriosam, maxime recusandae voluptate nesciunt doloribus quaerat odit perspiciatis dicta sed quos distinctio magni excepturi illo quasi id quidem? Accusamus possimus harum reprehenderit repellat alias odio similique eos dolor tenetur provident odit quia est illo neque vel, voluptate veritatis libero nam debitis quaerat deleniti assumenda voluptatem, omnis nisi? Cumque suscipit sed iusto voluptatem aperiam blanditiis sint nostrum inventore distinctio at, consectetur dolor cupiditate voluptatibus hic.</p>
+            </article>
+            <article class="article">
+                <img src="../asset/image/chat2.jfif" alt="">
+                <h4>Article 4</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda laudantium dicta, dolores ex voluptatibus aliquid cupiditate a quam atque inventore vel facere quisquam delectus quibusdam debitis natus odit libero at quasi fugiat quidem placeat. Velit expedita magni culpa laudantium. Consequatur perferendis nam eaque autem, quos tempore aperiam perspiciatis labore minus error voluptatem, sed quidem! Dolorum nisi deleniti dicta tempora esse labore! Facilis, earum dignissimos quis atque reprehenderit minima ullam accusamus exercitationem architecto a ipsa, eligendi corporis obcaecati enim dolore suscipit ut maxime voluptate doloribus quas ea saepe molestiae. Distinctio praesentium exercitationem facilis quod. Dignissimos est harum ab id odio deleniti magni maiores. Ducimus nesciunt, repudiandae adipisci corporis rerum, inventore unde consequatur veritatis mollitia et perspiciatis ratione natus quam officiis illum tempora! Officiis nobis dolore excepturi blanditiis possimus ut voluptate nesciunt vel repellat. Totam accusantium laboriosam, maxime recusandae voluptate nesciunt doloribus quaerat odit perspiciatis dicta sed quos distinctio magni excepturi illo quasi id quidem? Accusamus possimus harum reprehenderit repellat alias odio similique eos dolor tenetur provident odit quia est illo neque vel, voluptate veritatis libero nam debitis quaerat deleniti assumenda voluptatem, omnis nisi? Cumque suscipit sed iusto voluptatem aperiam blanditiis sint nostrum inventore distinctio at, consectetur dolor cupiditate voluptatibus hic.</p>
+            </article>
+        </section>
+        <h2>Contactez-nous</h2>
+        <section id="contact">
 
+        </section>
     </main>
 
     <footer>
